--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -29,13 +29,16 @@
    }
 
     h3 {
-    color: white;
+    color: black;
     text-align: center;
    }
   }
 
 .banner-activities {
   padding: 30px;
+   h1 {
+    color: white;
+   }
 }
 
 .show-banner-activities {
