--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -1,18 +1,21 @@
 .info-activities h2 {
     display: flex;
-    margin-left: 54px;
+    margin-left: 50px;
     margin-top: 88px;
     margin-right: 353px;
     font-size: 30px;
+     font-family: roboto;
 }
 
 .info-activities h3 {
-  margin-left: 30px;
+  margin-left: 50px;
   font-size: 30px;
+   font-family: roboto;
 }
 
 .info-activities {
   padding-top: 40px;
+  font-family: roboto;
 }
 
   .boutons-home {
