--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,8 +5,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0px 50px;
-  color: lightgrey;
-  bottom: 0;
+  color: black;
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -19,7 +18,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: lightgrey;
+  color: black;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
@@ -27,4 +26,8 @@
 }
 .footer-links a:hover {
   opacity: 1;
+}
+
+.footer-copyright {
+  color: lightgrey;
 }
