--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -49,7 +49,7 @@
   height: 20px;
   border-radius: 5px 0 0 5px;
   outline: none;
-  color: #9DBFAF;
+  color: #2D4654;
 }
 
 .searchTerm2 {
@@ -58,9 +58,8 @@
   border-right: none;
   padding: 15px;
   height: 20px;
-
   outline: none;
-  color: #9DBFAF;
+  color: #2D4654;
 }
 
 .searchTermhealth {
@@ -71,7 +70,7 @@
   height: 20px;
   border-radius: 5px 0 0 5px;
   outline: none;
-  color: #9DBFAF;
+  color: #2D4654;
 }
 
 .searchTerm2health {
@@ -82,12 +81,12 @@
   height: 20px;
 
   outline: none;
-  color: #9DBFAF;
+  color: #2D4654;
 }
 
 
 .searchTerm:focus{
-  color: #00B4CC;
+  color: black;
 }
 
 .searchButton {
