--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,14 +1,14 @@
  body.home {
-background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616263417/Photos%20Pros/Background-diff_iu0teh.jpg);
+background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616355491/Photos%20Pros/Background-violet_ol0bkr.jpg);
 
 }
 
 body.activities {
-background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616263417/Photos%20Pros/Background-diff_iu0teh.jpg);
+background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616355491/Photos%20Pros/Background-violet_ol0bkr.jpg);
 }
 
 body.health {
-background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616260346/Photos%20Pros/Background-vert_xavcjh.jpg);
+background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616355491/Photos%20Pros/Background-violet_ol0bkr.jpg);
 }
 
 
@@ -17,7 +17,7 @@ background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616
 body{
     margin: 0;
     padding: 0;
-    color: white;
+    color: black;
     background-size: cover;
     min-height: 100vh;
     font-family: roboto;
