--- a/app/views/cabinets/index.html.erb
+++ b/app/views/cabinets/index.html.erb
@@ -11,6 +11,7 @@
           <div class="praticien-infos">
             <h2> <%= cabinet.name %> </h2>
             <p> <%= cabinet.description %> </p>
+            <p> <%= cabinet.adresse_cabinet %> </p>
             <%= link_to "Prendre RDV", cabinet_path(cabinet) %>
           </div>
         </div>
