--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 
 <div class="container-home">
 <div class="home-banner">
-  <h1>Avec Parallel, une autre vision de la médecine</h1>
+  <h1>Une autre vision de la médecine avec Parallel</h1>
   <div class="search-bar-home">
     <%= render 'shared/searchbar' %>
 </div>
