--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,9 +5,10 @@
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
+
   </div>
 
   <div class="footer-copyright">
-    This is a fucking website
+  Mentions légales &emsp; CGU &emsp; Politique de confidentialité
   </div>
 </div>
