--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,13 +1,12 @@
 <div class="activities">
   <div class="container-activities">
     <div class="banner-activities">
-       <h1>Avec Parallel, une autre vision de la médecine</h1>
+       <h1>Une autre vision de la médecine avec Parallel</h1>
         <%= render 'shared/searchbaractivities' %>
     </div>
 
     <div class="info-activities">
-      <h3> Ce que proposent nos professionnels de santé:</h3>
-      <h2> Quelques petits mots explicatifs sur la démarche <br> très intéressante concernant toutes les <br> médecines parallèles que nous présentons </h2>
+      <h2>  Des doutes? Des questions ? <br> Découvrez de nouvelles pratiques en toute confiance </h2>
     </div>
 
     <div class=boutons-activities>
