--- a/app/views/cabinets/_info_window.html.erb
+++ b/app/views/cabinets/_info_window.html.erb
@@ -5,6 +5,6 @@
   <h4 style="color: white;"><%= cabinet.name %></h4>
 </div>
 <div class="popuptext">
+  <p style="color: white;"><%= cabinet.description %></p>
   <p style="color: white;"><%= cabinet.adresse_cabinet %></p>
-  <p style="color: white;"><%= cabinet.email %></p>
 </div>
