--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,11 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
     <%= yield %>
+
+    <% unless (controller_name == "cabinets" && action_name == "index") || (controller_name == "cabinets" && action_name == "show")  %>
+
     <%= render 'shared/footer' %>
+    <% end %>
+
   </body>
 </html>
