--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -1,5 +1,5 @@
 .calendcontainer {
-    width: 100px; /* On a indiqué une largeur (obligatoire) */
-    margin: auto; /* On peut donc demander à ce que le bloc soit centré avec auto */
+    width: 70%; /* On a indiqué une largeur (obligatoire) */ /* On peut donc demander à ce que le bloc soit centré avec auto */
     text-align: justify;
+    padding-left: 50px;
 }
