--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,7 @@
 
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <%= link_to "PARALLEL", '/', class: "nav-parallel" %>
+   <a href="/">
+    <img alt="parallel" src="https://res.cloudinary.com/cloudpandora/image/upload/v1616404689/PARALLEL_BL_e3dxsj.png">
     <ul class="navbar-nav">
 
       <% if user_signed_in? %>
