--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -54,3 +54,23 @@
     margin-right: 70px;
   }
 }
+
+.container-profil {
+   h1 {
+  text-align: center;
+  font-family: 'Martel', serif;
+   }
+
+   h2 {
+    font-family: 'Martel', serif;
+    font-size: 20px;
+    font-weight: bold;
+   }
+
+   p h2 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-right: 30px;
+    padding-left: 30px;
+   }
+}
