--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -77,3 +77,25 @@
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
+
+.show-card-profil-1 {
+  margin: auto;
+  background-color: rgba(0,0,0,0.12);
+  height: 175px;
+  width: 900px;
+  text-align: center;
+  padding-top: 60px;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.show-card-profil-2 {
+  margin: auto;
+  background-color: rgba(0,0,0,0.12);
+  height: 175px;
+  width: 900px;
+  text-align: center;
+  padding-top: 60px;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
