adding description seed

--- a/app/assets/stylesheets/components/_boutons.scss
+++ b/app/assets/stylesheets/components/_boutons.scss
@@ -113,7 +113,7 @@
 }
 
 .btn-4 {
-  background-image: linear-gradient(to right, #fcb69f 0%, #c2e9fb 51%, #a1c4fd 100%);
+  background-image: linear-gradient(to right, #fcb69f 0%, #c2e9fb 51%, #ffecd2 100%);
 }
 
 .btn-5 {
