--- a/app/views/simple_calendar/_calendar.html.erb
+++ b/app/views/simple_calendar/_calendar.html.erb
@@ -2,9 +2,9 @@
 <div class="simple-calendar">
   <div class="calendar-heading">
     <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-light page-link"><%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %></button>
-      <button type="button" class="btn btn-light"><span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span></button>
-      <button type="button" class="btn btn-light page-link"><%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %></button>
+      <button type="button" class="btn btn-15"><%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view, class: "textdecoration" %></button>
+      <button type="button" class="btn btn-15-date"><span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span></button>
+      <button type="button" class="btn btn-15"><%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view, class: "textdecoration" %></button>
     </div>
   </div>
 
@@ -21,13 +21,13 @@
       <% date_range.each_slice(7) do |week| %>
         <%= content_tag :tr, class: calendar.tr_classes_for(week) do %>
           <% week.each do |day| %>
-            <%= content_tag :td, class: calendar.td_classes_for(day) do %>
-              <% if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(passed_block) %>
-                <% capture_haml(day, sorted_events.fetch(day, []), &passed_block) %>
-              <% else %>
-                <% passed_block.call day, sorted_events.fetch(day, []) %>
+              <%= content_tag :td, class: calendar.td_classes_for(day) do %>
+                <% if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(passed_block) %>
+                  <% capture_haml(day, sorted_events.fetch(day, []), &passed_block) %>
+                <% else %>
+                  <% passed_block.call day, sorted_events.fetch(day, []) %>
+                <% end %>
               <% end %>
-            <% end %>
           <% end %>
         <% end %>
       <% end %>
