--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -1,63 +1,64 @@
 <!-- WARNING : CODE DU CALENDRIER CI-DESSOUS / DON'T TOUCH / ONLY FOR CSS CLASS -->
-
+<%= render 'shared/searchbarhealt' %>
 
 <div class="health">
-
   <div class="container-cabinet-show">
-  <div class="card-show-cabinet">
-    <div class="practicien-card-show">
-        <h1><%= @cabinet.name %></h1>
+      <div class="practicien-card-show">
         <div class="p-avatar">
-        <%= cl_image_tag @cabinet.photo.key %>
-       </div>
-    </div>
-  </div>
+          <%= cl_image_tag @cabinet.photo.key %>
+         </div>
+         <div class="praticien_card_info">
+            <h1><%= @cabinet.name %></h1>
+            <h2><%= @cabinet.description %></h2>
+            <h3><%= @cabinet.adresse_cabinet %></h3>
+            <h3><%= @cabinet.cp_cabinet %></h3>
+         </div>
+      </div>
 
 
 <!-- WARNING WARNING WARNING DON'T TOUCH THE CODE-->
 <!-- Sous ce commentaire se trouve l'ensemble du code calendrier avec le pop up confirmation (copier le code avec les commentaires) -->
 
-<div>
-  <%= calendar(number_of_days: 7) do |date| %>
-    <%= date %>
-    <% hour = 8 %>
-    <% 10.times do %>
-    <% if Reservation.where(start_time: date + hour.hours).exists? %>
-        <button type="button" class="btn calendarbutton2"><p>Réservé</p></button>
-        <% else %>
-        <button type="button" class="btn btn-light calendarbutton" data-toggle="modal" data-target="#exampleModal-<%= date %>-<%= hour %>"><p><%= hour %>h - <%= hour + 1 %>h</p></button>
-        <% end %>
-        <div class="modal fade" id="exampleModal-<%= date %>-<%= hour %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Confirmation de Rendez-vous</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <p>Rendez-vous le <%= date %> à <%= hour %>h</p>
-                <p>Au Cabinet <%= @cabinet.name %></p>
-                <p>Adresse : <%= @cabinet.adresse_cabinet %> <%= @cabinet.cp_cabinet %></p>
-                <p>Telephone : <%= @cabinet.telephone %></p>
-              </div>
-              <div class="modal-footer">
-                <%= simple_form_for [ @cabinet, @reservation ] do |f| %>
-                  <%= f.input :start_time, as: :hidden, input_html: { value: date.to_datetime + hour.hours }%>
-                  <%= f.input :end_time, as: :hidden, input_html: { value: date.to_datetime + (hour + 1).hours } %>
-                  <%= f.submit 'Confirmer', class: "btnSubmit" %>
-                <% end %>
+    <div class="calendar-display">
+      <%= calendar(number_of_days: 7) do |date| %>
+        <%= date %>
+        <% hour = 8 %>
+        <% 10.times do %>
+        <% if Reservation.where(start_time: date + hour.hours).exists? %>
+            <button type="button" class="btn calendarbutton2"><p>Réservé</p></button>
+            <% else %>
+            <button type="button" class="btn btn-light calendarbutton" data-toggle="modal" data-target="#exampleModal-<%= date %>-<%= hour %>"><p><%= hour %>h - <%= hour + 1 %>h</p></button>
+            <% end %>
+            <div class="modal fade" id="exampleModal-<%= date %>-<%= hour %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Confirmation de Rendez-vous</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <p>Rendez-vous le <%= date %> à <%= hour %>h</p>
+                    <p>Au Cabinet <%= @cabinet.name %></p>
+                    <p>Adresse : <%= @cabinet.adresse_cabinet %> <%= @cabinet.cp_cabinet %></p>
+                    <p>Telephone : <%= @cabinet.telephone %></p>
+                  </div>
+                  <div class="modal-footer">
+                    <%= simple_form_for [ @cabinet, @reservation ] do |f| %>
+                      <%= f.input :start_time, as: :hidden, input_html: { value: date.to_datetime + hour.hours }%>
+                      <%= f.input :end_time, as: :hidden, input_html: { value: date.to_datetime + (hour + 1).hours } %>
+                      <%= f.submit 'Confirmer', class: "btnSubmit" %>
+                    <% end %>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-      <% hour += 1 %>
-    <% end %>
-  <% end %>
-</div>
-
-
+          <% hour += 1 %>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
 </div>
 <!-- Fin du code du calendrier (copier le code avec les commentaires) -->
 
