--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -75,7 +75,6 @@
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-<<<<<<< HEAD
 .praticien_card_info {
 
   h1 {
@@ -87,7 +86,8 @@
   h3 {
     font-size: 12px;
   }
-=======
+}
+
 .show-card-profil-1 {
   margin: auto;
   background-color: rgba(0,0,0,0.12);
@@ -108,5 +108,4 @@
   padding-top: 60px;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
->>>>>>> 9c871c628c5d49efa9c6f6fa5f525456e8d46120
 }
