--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -18,9 +18,13 @@
         <div class="show-text-activities-hypnose">
           <% if @activity.name == "Hypnose" %>
           <div class="text-hypnose">
-          <p>L'hypnose permet de renforcer et d’amplifier les ressources présentes dans l’inconscient d’une personne afin de changer sa réalité. Sans hypnose, un sujet n’a accès qu’à ses pensées, ses habitudes et ses comportements conscients, qui sont restreints par des croyances appelées « limitantes ». En entrant dans le subconscient, ces aspects bloquants disparaissent, ce qui permet à l’esprit de développer et d’accéder sans limites à ses idées.
-            Il existe de nombreuses définitions de l’hypnose et de formes de thérapies hypnotiques. Celles-ci peuvent être longues ou très courtes, les suggestions peuvent être directes ou indirectes, etc.
-            Les thérapies par l’hypnose sont particulièrement indiquées lors d’états dépressifs, de traumatismes, de phobies ou d’addictions. Certains hôpitaux se servent également de l’hypnose en chirurgie, pour remplacer l’anesthésiant.
+          <p>L'hypnose permet de renforcer et d’amplifier les ressources présentes dans l’inconscient d’une personne afin de changer sa réalité. <br>
+           Sans hypnose, un sujet n’a accès qu’à ses pensées, ses habitudes et ses comportements conscients, qui sont restreints par des croyances appelées « limitantes ».<br>
+            En entrant dans le subconscient, ces aspects bloquants disparaissent, ce qui permet à l’esprit de développer et d’accéder sans limites à ses idées.
+            Il existe de nombreuses définitions de l’hypnose et de formes de thérapies hypnotiques. Celles-ci peuvent être longues ou très courtes, les suggestions peuvent être directes ou indirectes, etc...<br>
+           <br>
+           Les thérapies par l’hypnose sont particulièrement indiquées lors d’états dépressifs, de traumatismes, de phobies ou d’addictions. Certains hôpitaux se servent également de l’hypnose en chirurgie, pour remplacer l’anesthésiant.<br>
+           <br>
           Il faut cependant prêter attention à une méprise courante : les réactions à l’hypnose diffèrent selon les personnes. Certaines vont être très réceptives, d’autres moins. Si deux personnes ayant le même traumatisme sont traitées de la même façon, la thérapie peut très bien fonctionner sur l’une et ne pas avoir l’effet attendu sur l’autre. Il est donc nécessaire de faire le bon choix parmi les différents types d’hypnose.</p>
         </div>
         <div class="img-hypnose">
@@ -47,7 +51,6 @@
            <img alt="naturopathie" src="https://res.cloudinary.com/cloudpandora/image/upload/v1616418983/Photos%20Pros/leaf_png_rs7dgh.png">
           </div>
         </div>
-
         <% end %>
 
 <%= link_to 'Back', activities_path %>
