mise de lien sur les CGU du footer

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -28,6 +28,13 @@
   opacity: 1;
 }
 
-.footer-copyright {
+.footer-copyright a {
   color: lightgrey;
+  opacity: 0.20;
+  text-decoration: none;
 }
+
+.footer-copyright a:hover {
+  text-decoration: none;
+}
+
