--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,6 +9,6 @@
   </div>
 
   <div class="footer-copyright">
-  Mentions légales &emsp; CGU &emsp; Politique de confidentialité
+ <a href="#"> Mentions légales &emsp; CGU &emsp; Politique de confidentialité </a>
   </div>
 </div>
