--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -4,15 +4,24 @@
     <h1>Profil</h1>
     <hr />
     <br>
-    <div class="show-card-profil-1">
       <h2>Historique des rendez-vous</h2>
-      <p>Adresse - téléphone - Email</p>
-    </div>
-    <br>
+      <% @user.reservations.each do |reservation| %>
+      <div class="show-card-profil-1">
+      <p>Pratique : <%= reservation.cabinet.description %></p>
+      <p>Nom : <%= reservation.cabinet.name %></p>
+      <p>Email : <%= reservation.cabinet.email %></p>
+      <p>Adresse : <%= reservation.cabinet.adresse_cabinet %></p>
+      <p>Rendez-vous : Le <%= reservation.start_time.day %>/<%= reservation.start_time.month %>/<%= reservation.start_time.year %> de <%= reservation.start_time.hour %>h à <%= reservation.end_time.hour %>h</p>
+      </div>
+      <% end %>
+      <br>
     <div class="show-card-profil-2">
-      <h2>Informations</h2>
-      <p>Adresse - téléphone - Email</p>
+      <h2>Vos informations</h2>
+      <p><%= @user.prenom %> <%= @user.nom %></p>
+      <p>Téléphone : <%= @user.telephone %></p>
+      <p>Email : <%= @user.email %></p>
+      <p>Adresse : <%= @user.adresse %> <%= @user.city %> <%= @user.code_postal %></p>
     </div> 
-    <%= link_to 'Back', activities_path %>
+    <a><%= link_to 'Back', '/' %></a>
   </div>
-</div>
+ </div>
