--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,6 +21,8 @@ body{
     background-size: cover;
     min-height: 100vh;
     font-family: roboto;
+    position: relative;
+    padding-bottom: 50px;
   }
 
 h1 {
