--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,7 @@
           <%= link_to "Home", "#", class: "nav-link" %>
         </li>
         <li class="nav-item">
+          <%= link_to "Profil", '/profil', class: "nav-link" %>
           <%= link_to "Messages", "#", class: "nav-link" %>
         </li>
 
