--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -64,12 +64,11 @@
 
 .practicien-card-show {
   background: transparent;
-  height: 175px;
-  width: 500px;
+  height: 500px;
+  width: 700px;
   margin-left: 50px;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  flex-direction: column;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
