--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,11 +19,10 @@ body{
     color: black;
     background-size: cover;
     min-height: 100vh;
-    font-family: roboto;
     position: relative;
     padding-bottom: 50px;
   }
 
 h1 {
-  font-family: 'Martel', serif;
+  font-family: 'Montserrat', sans-serif;
 }
