--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -42,6 +42,9 @@
     opacity: 1;
   }
   }
+  p {
+    font-size: 15px;
+  }
 }
 .praticien-card:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -54,38 +57,28 @@
 }
 
 
+
 .container-cabinet-show {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 50px;
-  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
+.card-show-cabinet {
+  height: 500px;
+  margin-top: 50px;
+}
 
 .practicien-card-show {
   background: transparent;
   height: 175px;
-  width: 500px;
-  margin-left: 50px;
+  width: 400px;
   display: flex;
   align-items: center;
   justify-content: space-around;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
-
-.praticien_card_info {
-
-  h1 {
-    font-size: 18px;
-  }
-   h2 {
-    font-size: 15px;
-  }
-  h3 {
-    font-size: 12px;
-  }
 }
 
 .show-card-profil-1 {
