--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,24 +1,3 @@
-.container-profil {
-   h1 {
-  text-align: center;
-  font-family: 'Martel', serif;
-   }
-
-   h2 {
-    font-family: 'Martel', serif;
-    font-size: 20px;
-    font-weight: bold;
-   }
-
-   p h2 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding-right: 30px;
-    padding-left: 30px;
-   }
-}
-
-
 .container-home {
   height: 90vh;
   display: flex;
@@ -85,3 +64,29 @@
       padding-top: 20px;
     }
  }
+
+
+ .container-profil {
+  h1 {
+ text-align: center;
+ font-family: 'Montserrat', sans-serif;
+  }
+
+  h2 {
+   font-family: 'Montserrat', sans-serif;
+   font-size: 20px;
+   font-weight: bold;
+   text-align: center;
+  }
+
+  p h2 {
+   margin-bottom: 10px;
+   padding-right: 30px;
+   padding-left: 30px;
+  }
+
+  a {
+    color: black;
+    padding-left: 10px;
+  }
+}
