--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -3,19 +3,19 @@
     margin-left: 50px;
     margin-top: 88px;
     margin-right: 353px;
-    font-size: 30px;
-     font-family: roboto;
+    font-size: 25px;
+     font-family: 'Montserrat', sans-serif;
 }
 
 .info-activities h3 {
   margin-left: 50px;
   font-size: 30px;
-   font-family: roboto;
+   font-family: 'Montserrat', sans-serif;
 }
 
 .info-activities {
   padding-top: 40px;
-  font-family: roboto;
+  font-family: 'Montserrat', sans-serif;
 }
 
   .boutons-home {
