--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2 style="text-align: center;">Inscription</h2>
 <br>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -88,6 +89,7 @@
   <div class="form-actions">
     <%= f.button :submit, "S'inscrire" %>
   </div>
+</div>
 </div>
 <% end %>
 <%= render "devise/shared/links" %>
