--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -64,9 +64,10 @@
 
 .practicien-card-show {
   background: transparent;
-  height: 500px;
+  height: 461px;
   width: 700px;
   margin-left: 50px;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   border-radius: 5px;
@@ -74,8 +75,13 @@
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
+.praticien-card-top {
+  display: flex;
+  justify-content: flex-start;
+  padding: 20px;
+}
 .praticien_card_info {
-
+  padding-left: 80px;
   h1 {
     font-size: 18px;
   }
