--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -3,22 +3,24 @@
 <div class="health">
   <div class="container-cabinet-show">
       <div class="practicien-card-show">
-        <div class="p-avatar">
-          <%= cl_image_tag @cabinet.photo.key %>
-        </div>
-        <div class="praticien_card_info">
-          <h1><%= @cabinet.name %></h1>
-          <h2><%= @cabinet.description %></h2>
-          <h3><%= @cabinet.adresse_cabinet %></h3>
-          <h3><%= @cabinet.cp_cabinet %></h3>
+        <div class="praticien-card-top">
+          <div class="p-avatar">
+            <%= cl_image_tag @cabinet.photo.key %>
+          </div>
+          <div class="praticien_card_info">
+            <h1><%= @cabinet.name %></h1>
+            <h2><%= @cabinet.description %></h2>
+            <h3><%= @cabinet.adresse_cabinet %></h3>
+            <h3><%= @cabinet.cp_cabinet %></h3>
+          </div>
         </div>
         <div class="map-index">
-        <div id="map"
-           style="width: 100%; height: 300px;"
-           data-markers="<%= @markers.to_json %>"
-           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+          <div id="map"
+             style="width: 100%; height: 300px;"
+             data-markers="<%= @markers.to_json %>"
+             data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+          </div>
         </div>
-      </div>
       </div>
 
 
