--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -60,35 +60,28 @@
 
 .container-cabinet-show {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  padding-top: 60px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .card-show-cabinet {
-  height: 500px;
-  margin-top: 50px;
+  height: 100%;
+  padding-right: 10px;
+
 }
 
 .practicien-card-show {
-  background: transparent;
-  height: 461px;
-  width: 700px;
-  margin-left: 50px;
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
+  background: white;
+  margin-bottom: 15px;
+  min-width: 40vw;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.praticien-card-top {
-  display: flex;
-  justify-content: flex-start;
-  padding: 20px;
-}
 .praticien_card_info {
-  padding-left: 80px;
+  padding-left: 10px;
+
   h1 {
     font-size: 23px;
     font-weight: bolder;
