--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -92,6 +92,10 @@
   color: #000;
   background-color: #fff;
   transition: all 1s ease-out;
+  cursor: pointer;
+  border: none;
+  border-radius: 15px;
+  margin-bottom: 5px;
 }
 
 .calendarbutton:after {
