--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -29,13 +29,15 @@
 
     <div>
       <%= calendar(number_of_days: 5) do |date| %>
-        <%= date %>
+        <!-- <%= date %> -->
         <% hour = 8 %>
         <% 10.times do %>
         <% if date.wday == 0 || date.wday == 6 %>
-          <button type="button" class="calendarbutton3"></button>
+          <button type="button" class="calendarbutton"></button>
+        <% elsif hour == 12 || hour == 13 %>
+          <button type="button" class="btn"></button>
         <% elsif Reservation.where(start_time: date + hour.hours).exists? %>
-            <button type="button" class="calendarbutton2"><p>Réservé</p></button>
+            <button type="button" class="calendarbutton reserver"><p>Réservé</p></button>
             <% else %>
             <button type="button" class="calendarbutton" data-toggle="modal" data-target="#exampleModal-<%= date %>-<%= hour %>"><p><%= hour %>h - <%= hour + 1 %>h</p></button>
             <% end %>
