--- a/app/views/simple_calendar/_calendar.html.erb
+++ b/app/views/simple_calendar/_calendar.html.erb
@@ -12,7 +12,7 @@
     <thead>
       <tr>
         <% date_range.slice(0, 7).each do |day| %>
-          <th><%= t('date.abbr_day_names')[day.wday] %></th>
+          <th><%= t('date.abbr_day_names')[day.wday] %> <%= day.strftime("%d") %> <%= t('date.month_names')[start_date.month] %> <%= start_date.year %></th>
         <% end %>
       </tr>
     </thead>
