--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -79,6 +79,18 @@
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
+.card-contact-show {
+  display: flex;
+  justify-content: center;
+}
+
+.contact-info-show {
+  background: white;
+  width: 20vw;
+
+
+}
+
 .praticien_card_info {
   padding-left: 10px;
 
