--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -57,17 +57,20 @@
         <% hour += 1 %>
       <% end %>
     <% end %>
-  </div>
+
 </div>
 <!-- Fin du code du calendrier (copier le code avec les commentaires) -->
 <div class="card-contact-show">
   <div class="contact-info-show">
-    <div class="map-index">
+    <p> contact </p>
+    <p> adresse </p>
+  </div>
+    <div class="map-show">
       <div id="map"
-        style="width: 100%; height: 300px;"
+        style="width: 100%; height: 200px;"
         data-markers="<%= @markers.to_json %>"
         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
     </div>
-  </div>
+</div>
 </div>
