du style sur l'index practiciens

--- a/app/views/cabinets/index.html.erb
+++ b/app/views/cabinets/index.html.erb
@@ -3,7 +3,9 @@
 <div class=health>
 
 
-
+<div class="du-texte">
+<p>Les résultats de ta recherche pour les praticiens de ta région : </p>
+</div>
   <div class="big-praticien-container">
     <div class="praticiens-container">
       <% @cabinets.each do |cabinet| %>
