--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -90,3 +90,12 @@
     padding-left: 10px;
   }
 }
+
+.du-texte {
+  display: flex;
+  justify-content: center;
+  padding-top: 15px;
+  font-size: 18px;
+  color: white;
+  font-weight: bold;
+}
