--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -25,13 +25,10 @@
 }
 
 .searchtext3 {
- margin-left: 220px;
-
+  color: white;
+  font-size: 20px;
 }
 
-.search__container {
-
-}
 
 .search__container2 {
   padding: 30px;
@@ -74,7 +71,7 @@
 }
 
 .searchTerm2health {
-  width: 420px;
+  width: 100%;
   border: 3px solid white;
   border-right: none;
   padding: 15px;
@@ -109,4 +106,19 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+
+
+
+/* Feuille de style intégrée #3 | http://localhost:3000/cabinets?query_activity=hypnose&query_localisation=&button= */
+
+.search__container3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .search_top, .search-form {
+    width: 70%;
+  }
 }
