change home- button size and text color

--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -1,27 +1,27 @@
 .info-activities h2 {
-    display: flex;
-    margin-left: 50px;
-    margin-top: 88px;
-    margin-right: 353px;
-    font-size: 25px;
-     font-family: 'Montserrat', sans-serif;
+  display: flex;
+  margin-left: 50px;
+  margin-top: 88px;
+  margin-right: 353px;
+  font-size: 25px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .info-activities h3 {
   margin-left: 50px;
   font-size: 30px;
-   font-family: 'Montserrat', sans-serif;
-}
-
-.info-activities {
-  padding-top: 40px;
   font-family: 'Montserrat', sans-serif;
 }
 
-  .boutons-home {
-    h3 {
-      padding-right: 200px;
+.info-activities {
+  padding-left: 100px;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+}
 
-      padding-top: 80px;
+.boutons-home {
+  h3 {
+  padding-right: 200px;
+  padding-top: 80px;
     }
   }
