--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,9 @@
 .banner-activities {
-  padding: 30px;
+  padding: 50px;
+  margin-left: 30px;
    h1 {
     color: white;
+    font-size: 30px;
     padding-top: 20px;
     padding-left: 20px;
    }
