--- a/app/assets/stylesheets/components/_boutons.scss
+++ b/app/assets/stylesheets/components/_boutons.scss
@@ -39,10 +39,11 @@
  }
 
  .btn-activities {
-  height: 200px;
-  min-width: 200px;
+  height: 185px;
+  min-width: 185px;
   margin: 10px;
   color: white;
+  font-weight: bolder;
   text-align: center;
   text-transform: uppercase;
   transition: 1s ease-in-out;
