background changed, modification homepage

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -6,7 +6,10 @@
       </div>
 
       <div class="info-activities">
-        <h2>Besoin d'être guidé sur le choix de la pratique ? <br> Découvres nos 5 pratiques corps-esprit </h2>
+        <h2>Besoin d'être guidé sur le choix de la pratique ?</h2>
+      </div>
+      <div class="info-activities-2">
+        <h2>Découvres nos 5 pratiques corps-esprit </h2>
       </div>
 
       <div class=boutons-activities>
@@ -18,6 +21,3 @@
       </div>
     </div>
   </div>
-
-
-
