--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -8,12 +8,12 @@
       <div class="praticien_card_info">
         <h1><%= @cabinet.name %></h1>
         <h2><%= @cabinet.description %></h2>
-        <h3><%= @cabinet.adresse_cabinet %></h3>
-        <h3><%= @cabinet.cp_cabinet %></h3>
         <h3> Présentation </h3>
-        <h3> Diplôme </h3>
+        <p> Je suis hypnothérapeute </p>
         <h3> Formation </h3>
+        <p> J'ai des diplômes d'hypnose
         <h3> Expérience </h3>
+        <p> J'ai de l'expérience </p>
       </div>
     </div>
     <!-- WARNING WARNING WARNING DON'T TOUCH THE CODE-->
