--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -1,21 +1,18 @@
-.info-activities h2 {
+.info-activities p {
     display: flex;
     margin-left: 50px;
     margin-top: 88px;
     margin-right: 353px;
-    font-size: 25px;
-     font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
 }
 
 .info-activities h3 {
   margin-left: 50px;
   font-size: 30px;
-   font-family: 'Montserrat', sans-serif;
 }
 
 .info-activities {
   padding-top: 40px;
-  font-family: 'Montserrat', sans-serif;
 }
 
   .boutons-home {
