--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -6,7 +6,7 @@
     </div>
 
     <div class="info-activities">
-      <h2>  Des doutes ? Des questions ? <br> Découvrez de nouvelles pratiques en toute confiance </h2>
+      <p>  Des doutes ? Des questions ? <br> Découvrez de nouvelles pratiques en toute confiance </p>
     </div>
 
     <div class=boutons-activities>
