--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,10 +1,12 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cardo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Source+Sans+Pro&display=swap');
 
 // Define fonts for body and headers
 $body-font: 'Montserrat', sans-serif;
-$headers-font: 'Open Sans', sans-serif;
+$headers-font: 'Quattrocento Sans', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
