--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -6,10 +6,10 @@
       </div>
 
       <div class="info-activities">
-        <h2>Besoin d'être guidé sur le choix de la pratique ?</h2>
+        <p>Besoin d'être guidé sur le choix de la pratique ?</p>
       </div>
       <div class="info-activities-2">
-        <h2>Découvres nos 5 pratiques corps-esprit </h2>
+        <p>Découvres nos 5 pratiques corps-esprit </p>
       </div>
 
       <div class=boutons-activities>
