infos sur la show

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -51,6 +51,10 @@
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
+.p-avatar {
+  display: flex;
+}
+
 .p-avatar img {
   width: 110px;
   height: 110px;
