correction conflit style font

--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -1,15 +1,14 @@
 .info-activities {
+  padding-bottom: 50px;
   padding-top: 40px;
-
-.info-activities p {
-  padding-left: 100px;
+  padding-left: 120px;
   color: white;
+  font-size: 20px;
 }
 
 .info-activities-2 {
-  padding-left: 170px;
+  padding-left: 350px;
   color: white;
-  font-family: 'Montserrat', sans-serif;
   font-size: 20px;
 }
 
@@ -17,6 +16,5 @@
   h3 {
   padding-right: 200px;
   padding-top: 80px;
-    }
   }
 }
