--- a/app/views/cabinets/_info_window.html.erb
+++ b/app/views/cabinets/_info_window.html.erb
@@ -2,9 +2,9 @@
   <div class="p-avatar2">
     <%= cl_image_tag cabinet.photo.key %>
   </div>
-  <h4 style="color: white;"><%= cabinet.name %></h4>
+  <h4 style="color: black;"><%= cabinet.name %></h4>
 </div>
 <div class="popuptext">
-  <p style="color: white;"><%= cabinet.description %></p>
-  <p style="color: white;"><%= cabinet.adresse_cabinet %></p>
+  <p style="color: black;"><%= cabinet.description %></p>
+  <p style="color: black;"><%= cabinet.adresse_cabinet %></p>
 </div>
