--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -7,8 +7,7 @@
         <h1><%= @cabinet.name %></h1>
       </div>
       <div class="praticien_card_info">
-        <p> Hypnothérapeute </p>
-        <p> Infirmière en consultations médicales psychiatriques, je me consacre depuis 2010 à l'hypnothérapie, activité que j'exerce à Marseille
+        <p> Anciennement infirmière en consultations médicales psychiatriques, je me consacre depuis 2010 à l'hypnothérapie, activité que j'exerce à Marseille
        </p>
         <h3> Formation </h3>
         <p> 2011 - Praticienne certifiée en hypnose ericksonienne - Ecole de sophrologie Aix-Marseille<br>
