--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -81,7 +81,8 @@
 .practicien-card-show {
   background: white;
   margin-bottom: 15px;
-  min-width: 40vw;
+  min-width: 50vw;
+  max-width: 50vw;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
