modification du texte

--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -1,15 +1,18 @@
+.banner-activities {
+  h1 {
+    text-align: center;
+  }
+}
+
 .info-activities {
-  padding-left: 100px;
+  padding-left: 120px;
+  padding-bottom: 50px;
   color: white;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
 }
 
 .info-activities-2 {
-  padding-left: 170px;
+  padding-left: 275px;
   color: white;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
 }
 
 .boutons-home {
