--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,15 +1,15 @@
   <div class="activities">
     <div class="container-activities">
       <div class="banner-activities">
-         <h1>Une autre vision de la médecine avec Parallel</h1>
+         <h1>Être avec toi, pour trouver la personne de confiance</h1>
           <%= render 'shared/searchbaractivities' %>
       </div>
 
       <div class="info-activities">
-        <h2>Besoin d'être guidé sur le choix de la pratique ?</h2>
+        <p>Parallel, c'est donner un accès simplifé à des personnes de confiance<br> pour vous accompagner  dans la découverte d'une nouvelle pratique.</p>
       </div>
       <div class="info-activities-2">
-        <h2>Découvres nos 5 pratiques corps-esprit </h2>
+        <h5>Des questions? Prends le temps, là pour toi de découvrir.</h5>
       </div>
 
       <div class=boutons-activities>
