end of home and show

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -90,12 +90,13 @@
 .card-contact-show {
   display: flex;
   justify-content: center;
-
 }
 
 .contact-info-show {
   background: white;
   width: 25vw;
+  padding-left: 10px;
+  padding-top: 10px;
 }
 
 .praticien_card_info {
