--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,11 +3,15 @@ background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616
 }
 
 body.activities {
-background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616260517/Photos%20Pros/Background-simple_xroeme.jpg);
+background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616578083/dawn-3358468_1920_1_waaq6s.jpg);
+}
+
+body.activities-show {
+  background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616580077/fond_sans_arbre_m3aogd.jpg);
 }
 
 body.health {
-background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616260517/Photos%20Pros/Background-simple_xroeme.jpg);
+background-image: url(https://res.cloudinary.com/cloudpandora/image/upload/v1616580077/fond_sans_arbre_m3aogd.jpg);
 }
 
 
