--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -1,18 +1,20 @@
-.banner-activities {
-  h1 {
-    text-align: center;
-  }
-}
 
 .info-activities {
   padding-left: 120px;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
+  padding-top: 100px;
   color: white;
+   h5 {
+    font-size: 21px;
+   }
 }
 
 .info-activities-2 {
-  padding-left: 275px;
+  padding-left: 250px;
   color: white;
+   h5 {
+    font-size: 21px;
+   }
 }
 
 .boutons-home {
