--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -21,9 +21,11 @@
     <%= calendar(number_of_days: 5) do |date| %>
       <% hour = 8 %>
       <% 10.times do %>
-        <% if date.wday == 0 || date.wday == 6 %>
+        <% if date.wday == 0 %>
           <button type="button" class="calendarbutton"></button>
         <% elsif hour == 12 || hour == 13 %>
+          <button type="button" class="btn"></button>
+        <% elsif date.wday == 6 && (hour == 12 || hour == 13 || hour == 14 || hour == 15 || hour == 16 || hour == 17) %>
           <button type="button" class="btn"></button>
         <% elsif Reservation.where(start_time: date + hour.hours).exists? %>
           <button type="button" class="calendarbutton2"><p class="m-0">Réservé</p></button>
