--- a/app/views/simple_calendar/_calendar.html.erb
+++ b/app/views/simple_calendar/_calendar.html.erb
@@ -2,9 +2,9 @@
 <div class="simple-calendar">
   <div class="calendar-heading">
     <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-15"><%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view, class: "textdecoration" %></button>
+      <button type="button" class="btn btn-15"><%= link_to t('simple_calendar.previous', default: 'Précédent'), calendar.url_for_previous_view, class: "textdecoration" %></button>
       <button type="button" class="btn btn-15-date"><span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span></button>
-      <button type="button" class="btn btn-15"><%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view, class: "textdecoration" %></button>
+      <button type="button" class="btn btn-15"><%= link_to t('simple_calendar.next', default: 'Suivant'), calendar.url_for_next_view, class: "textdecoration" %></button>
     </div>
   </div>
 
