style cabinet show

--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -64,7 +64,7 @@
 <div class="card-contact-show">
   <div class="contact-info-show">
     <h3> Accès </h3>
-    <h><%= @cabinet.adresse_cabinet %></p>
+    <p><%= @cabinet.adresse_cabinet %></p>
     <p><%= @cabinet.cp_cabinet %></p>
     <h3> Contact </h3>
     <p> tel: 04.67.89.01 </p>
