--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -6,7 +6,8 @@
       </div>
 
       <div class="info-activities">
-        <h5>Parallel, vous offre un accès simplifié aux médecines alternatives<br> pour vous accompagner dans la découverte d'une nouvelle pratique de soin.
+        <h5>Parallel vous offre un accès simplifié aux médecines alternatives<br>
+          pour vous accompagner dans la découverte d'une nouvelle pratique de soin.
            </h5>
 
       </div>
