--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -1,19 +1,20 @@
 
 .info-activities {
-  padding-left: 120px;
-  padding-bottom: 30px;
-  padding-top: 100px;
-  color: white;
+  padding-left: 100px;
+  padding-bottom: 40px;
+  padding-top: 40px;
+  opacity: 0.7;
    h5 {
     font-size: 21px;
    }
 }
 
 .info-activities-2 {
-  padding-left: 250px;
-  color: white;
+  padding-left: 120px;
+  opacity: 0.7;
    h5 {
     font-size: 21px;
+
    }
 }
 
