--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -1,5 +1,5 @@
 <div class="container-profil">
-  <%= render 'shared/searchbaractivities' %>
+  <%= render 'shared/searchbarhealt' %>
   <div class="show-banner-profil">
     <h1>Profil</h1>
     <hr />
