Heroku meta tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Martel:wght@300;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <title>Parallel | La mèdecine alternative</title>
+    <title>Parallel | Une autre approche de la médecine</title>
   </head>
 
   <body class="<%= @body_class %>">
