--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,7 +1,9 @@
 <div class="show-banner-activities">
   <%= render 'shared/searchbaractivities' %>
   <div class="show-container-activities">
-
+    <!-- app/views/offers/show.html.erb -->
+    <% content_for :meta_title, "#{@activity.name} is on #{DEFAULT_META["meta_product_name"]}" %>
+    <% content_for :meta_description, @activity.description %>
     <h1><%= @activity.name %></h1>
 
     <% if @activity.name == "Hypnose" %>
