--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Martel:wght@300;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <title><%= meta_title %></title>
+    <meta name="description" content="<%= meta_description %>">
     <title>Parallel | Une autre approche de la médecine</title>
   </head>
 
