--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -132,9 +132,11 @@
 
 .contact-info-show {
   background: white;
-  width: 25vw;
+  width: 27vw;
   padding-left: 10px;
   padding-top: 10px;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .praticien_card_info {
