changement praticien + fautes ortho

--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -8,14 +8,14 @@
         <h1><%= @cabinet.name %></h1>
       </div>
       <div class="praticien_card_info">
-        <p> Anciennement infirmière en consultations médicales psychiatriques, je me consacre depuis 2010 à l'hypnothérapie, activité que j'exerce à Marseille
+        <p> Anciennement infirmière en consultations médicales psychiatriques, je me consacre depuis 2010 à l'hypnothérapie, activité que j'exerce à Marseille.
        </p>
         <h3> Formation </h3>
         <p> 2011 - Praticienne certifiée en hypnose ericksonienne - Ecole de sophrologie Aix-Marseille<br>
         Je suis actuellement formatrice dans mon propre centre.
         </p>
         <h3> Expérience </h3>
-        <p> Mon axe de travail est de vous suivre pour faire émerger un sens aux situations de crise ou événements majeurs de votre vie. Les troubles émotionnel et symptômes qui s'y associent sont souvent de résistances aux changements qui freinent votre évolution. </p>
+        <p> Mon axe de travail est de vous suivre pour faire émerger un sens aux situations de crise ou événements majeurs de votre vie. Les troubles émotionnels et symptômes qui s'y associent sont souvent des résistances aux changements qui freinent votre évolution. </p>
       </div>
     </div>
     <!-- WARNING WARNING WARNING DON'T TOUCH THE CODE-->
@@ -70,7 +70,7 @@
     <p><%= @cabinet.adresse_cabinet %></p>
     <p><%= @cabinet.cp_cabinet %></p>
     <h3> Contact </h3>
-    <p> tel: 04.67.89.01 </p>
+    <p> Tél: 04.67.89.01.56 </p>
   </div>
     <div class="map-show">
       <div id="map"
