--- a/app/views/shared/_searchbaractivities.html.erb
+++ b/app/views/shared/_searchbaractivities.html.erb
@@ -1,6 +1,6 @@
 <div class="search__container2">
     <p class="searchtext">
-      Je trouve mon practicien
+      Je trouve mon praticien
     </p>
 
      <%= form_tag cabinets_path, method: :get, class: "search2" do %>
