--- a/app/views/shared/_searchbarhealt.html.erb
+++ b/app/views/shared/_searchbarhealt.html.erb
@@ -1,7 +1,7 @@
 <div class="search__container3">
   <div class="search_top">
     <p class="searchtext3">
-      Je trouve mon practicien
+      Je trouve mon praticien
     </p>
   </div>
   <div class="search-form">
