--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -44,7 +44,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                <p>Rendez-vous le <%= date %> à <%= hour %>h</p>
+                <p>Rendez-vous le <%= date.strftime("%d-%m-%Y") %> à <%= hour %>h</p>
                 <p>Au Cabinet <%= @cabinet.name %></p>
                 <p>Adresse : <%= @cabinet.adresse_cabinet %> <%= @cabinet.cp_cabinet %></p>
                 <p>Email : <%= @cabinet.email %></p>
