--- a/app/views/cabinets/show.html.erb
+++ b/app/views/cabinets/show.html.erb
@@ -74,7 +74,8 @@
   </div>
     <div class="map-show">
       <div id="map"
-        style="width: 100%; height: 200px;"
+        style="width: 99%; height: 200px; border-radius: 0 5px 5px 0;   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+"
         data-markers="<%= @markers.to_json %>"
         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
