--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: transparent;
-  width: 100%; height: 50px;
+  width: 100%;
   top: 0; left: 0; right: 0;
    img {
     width: 200px;
